--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-v0-project",
   "version": "0.1.0",
+  "homepage": "https://your-username.github.io/your-repo-name",
   "private": true,
   "scripts": {
     "build": "next build",
