--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-v0-project",
   "version": "0.1.0",
-  "homepage": "https://fortelh.github.io/your-repo-name",
+  "homepage": "https://fortelh.github.io/Hussein-Haj-Hussein",
   "private": true,
   "scripts": {
     "build": "next build",
